--- a/src/app/tesla-battery/components/tesla-wheels/tesla-wheels.component.scss
+++ b/src/app/tesla-battery/components/tesla-wheels/tesla-wheels.component.scss
@@ -21,10 +21,10 @@
     background-repeat: no-repeat;
     background-size: 44px;
     &--19 {
-      background-image: url(assets/wheels/19.svg);
+      background-image: url(/assets/wheels/19.svg);
     }
     &--21 {
-      background-image: url(assets/wheels/21.svg);
+      background-image: url(/assets/wheels/21.svg);
     }
     &--focused {
       background-color: #f2f2f2;
