--- a/src/app/tesla-battery/components/tesla-car/tesla-car.component.scss
+++ b/src/app/tesla-battery/components/tesla-car/tesla-car.component.scss
@@ -1,7 +1,7 @@
 .tesla-car {
   width: 100%;
   min-height: 350px;
-  background: #fff url(assets/tesla.jpg) no-repeat top center;
+  background: #fff url(/assets/tesla.jpg) no-repeat top center;
   background-size: contain;
 }
 .tesla-wheels {
@@ -25,14 +25,14 @@
     right: 72px;
   }
   &--19 {
-    background-image: url(assets/wheel-19.png);
+    background-image: url(/assets/wheel-19.png);
     -webkit-animation: infinite-spinning 250ms steps(6) infinite;
     -moz-animation: infinite-spinning 250ms steps(6) infinite;
     -o-animation: infinite-spinning 250ms steps(6) infinite;
     animation: infinite-spinning 250ms steps(6) infinite;
   }
   &--21 {
-    background-image: url(assets/wheel-21.png);
+    background-image: url(/assets/wheel-21.png);
     -webkit-animation: infinite-spinning 480ms steps(12) infinite;
     -moz-animation: infinite-spinning 480ms steps(12) infinite;
     -o-animation: infinite-spinning 480ms steps(12) infinite;
