--- a/src/app/tesla-battery/components/tesla-counter/tesla-counter.component.scss
+++ b/src/app/tesla-battery/components/tesla-counter/tesla-counter.component.scss
@@ -73,11 +73,11 @@
       }
       &:first-child {
         border-bottom: 1px solid #fff;
-        background-image: url(assets/counter/up.svg);
+        background-image: url(/assets/counter/up.svg);
       }
       &:last-child {
         border-top: 1px solid #ccc;
-        background-image: url(assets/counter/down.svg);
+        background-image: url(/assets/counter/down.svg);
       }
     }
   }
