--- a/src/app/tesla-battery/components/tesla-stats/tesla-stats.component.scss
+++ b/src/app/tesla-battery/components/tesla-stats/tesla-stats.component.scss
@@ -33,22 +33,22 @@
     background-position: top right;
     background-repeat: no-repeat;
     &--60 {
-      background-image: url(assets/models/60.svg);
+      background-image: url(/assets/models/60.svg);
     }
     &--60d {
-      background-image: url(assets/models/60d.svg);
+      background-image: url(/assets/models/60d.svg);
     }
     &--75 {
-      background-image: url(assets/models/75.svg);
+      background-image: url(/assets/models/75.svg);
     }
     &--75d {
-      background-image: url(assets/models/75d.svg);
+      background-image: url(/assets/models/75d.svg);
     }
     &--90d {
-      background-image: url(assets/models/90d.svg);
+      background-image: url(/assets/models/90d.svg);
     }
     &--p100d {
-      background-image: url(assets/models/p100d.svg);
+      background-image: url(/assets/models/p100d.svg);
     }
   }
 }
